src/styles/App.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;900&display=swap');

:root {
	--black: #2D2D2D;
	--gray: #909090;
	--lightgray: #c5c5c5;
	--primary: #8424FF;
	--red: #FF2424;
}

html {
	font-size: 18px;
}

p {
	font-family: 'Inter', sans-serif;
	font-weight: 700;
	font-size: 0.80rem;
	margin-bottom: 1rem;
	color: var(--gray);
}

h1 {
	font-family: 'Inter', sans-serif;
	font-weight: 700;
	font-size: 2.5rem;
	margin-bottom: 1rem;
	color: var(--black);
}

h2 {
	font-family: 'Inter', sans-serif;
	font-weight: 700;
	font-size: 1rem;
	margin-bottom: 1rem;
	color: var(--gray);
	transition-duration: 200ms;
}

label {
	font-family: 'Inter', sans-serif;
	font-weight: 700;
	font-size: 1rem;
	color: var(--gray);
	position: relative;
	transition-duration: 200ms;
	user-select: none;
}

a {
	font-family: 'Inter', sans-serif;
	font-weight: 700;
	font-size: 1rem;
	color: var(--primary);
}

.App {
	display: flex;
	flex-direction: column;
	align-items: center;
	height: 100vh;
}

.app-column {
	display: flex;
	flex-direction: column;
	max-width: 600px;
	position: relative;
	min-height: 100vh;
}

.margin-container {
	margin: 0 1rem 0 1rem;
}

.black {
	color: var(--black);
}

.err {
	color: var(--red);
}

.warn {
	color: #ffa724;
}

.disabled {
	color: var(--lightgray);
	cursor: not-allowed;
}

.selected {
	color: var(--primary);
	transition-duration: 200ms;
}

.nomargin {
	margin: 0;
}

.row {
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	align-items: center;
}

.footer-container {
	width: 100%;
	display: flex;
	justify-content: space-between;
	align-items: center;
	position: absolute;
	bottom: 2rem;
}

button {
	font-family: 'Inter', sans-serif;
	font-weight: 700;
	font-size: 1rem;
	text-align: left;
	color: white;
	background-color: var(--primary);
	border: none;
	padding: 1.5rem;
	margin: 2rem 0 2rem 0;
	width: 100%;
	transition-duration: 200ms;
	cursor: pointer;
}

button:focus {
	outline-width: 3px;
	outline-style: solid;
	outline-color: var(--primary);
	transition-duration: 200ms;
}

